Scopes to @opencdms

--- a/opencdms-helloworld/package.json
+++ b/opencdms-helloworld/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opencdms-helloworld",
+  "name": "@opencdms/helloworld",
   "version": "0.1.0",
   "main": "src/main.js",
   "keywords": ["OpenCDMS", "Web Component"],
